--- a/src/系统规划.md
+++ b/src/系统规划.md
@@ -25,4 +25,34 @@
 + 变动成本 `一定时期、一定业务范围内，总额与业务量成正比例变动的成本。如直接材料费、产品包装费、外包费、开发奖金`
   + 酌量变动 `开发奖金、外包费等`
   + 约束性变动 `直接物消耗成本等`
-+ 混合成本 `混合固定成本、变动成本的性质`
++ 混合成本 `混合固定成本、变动成本的性质 如水电费、电话费。有时员工的工资也能属于。`
+### 收益
+### 有型收益 
+`也称经济收益，可以用货币的时间价值、投资回收期、投资回收率等指标度量`
++ 一次性经济收益 `体现在开展的缩减与价值的提升，如资源要求的减收、运行效率的改进、管理运行效率的提升、多余设备的售出等`
++ 非一次性收益 `在信息系统的生命周期内，由于运行系统而获得的按月、年的能用货币数目表示的收益，包括开支的减少或避免。如信息系统的使用提高了工作效率，每个月节省的人员工资`
+### 无形收益
+`也称不可定量收益，主要从性质、心里进行衡量，很难进行比较。如服务的改进、技术积累等`
+
+## 盈亏临界分析
+`又称损益平衡分析，主要研究盈亏临界点、有关因数的变动对临界点的影响等问题。决定市场变化适应力、抗风险能力`
++ 利润 = （销售单价-单位变动成本） * 销量 - 总固定成本
++ 盈亏临界点销量 = 总固定成本 / （销售单价 - 单位变动成本）
++ 盈亏临界点销售额 = 总固定成本 / （1-总变动成本/销售收入）
+
+## 净现值分析
+### 货币的时间价值 `与银行的利率和利息计算方式有关即单利与复利`  
++ 单利 F = P * (1+i*n) 复利 F = P * (1+i)^n `p为本金也称现值、i为利率、n为年期 F为n年后的价值`
++ 折现因子/折现系数 为 P/F
+### 净现值分析 （net present value, NPV）  
+指项目生命周期内各年的净现金流量按照一定的、相同的折现率折现到初时的现值之和
++ 净现值 总ci-总co
++ 净现值率 净现值/总co
+### 投资回收期与投资回报率
+`投资回收的期限，时间。根据是否考虑资金的时间价值分为：静态/动态投资回收期。包含建设期`
++ 投资回收期 
++ 投资回收率 `反应企业获利能力 1/动态投资回收期 * 100%`
++ 投资收益率 `又称利润率， 总ci/总co`
+
+
+# THE END
