完结系统分析

--- a/src/系统分析.md
+++ b/src/系统分析.md
@@ -46,3 +46,61 @@
 + 供应链分析法 `从企业供应链的角度分析业务流程，源于SCM。主要重企业内部和外部供应链分析业务核心环节`
 + 基于ERP的分析法 `基本思想是将企业的业务流程看作是一个紧密连接的供应链，将供应商和企业内部的采购、生产、销售、客户紧密连接，对供应链上所有环节进行有效管理。实现企业的动态控制和各种资源的集成优化，以此提升企业基础管理水平，追求企业资源的合理、高效利用`
 + 业务流程重组 `通过从审视价值链，从功能成本的比较分析，确定企业的流程环节优势。以顾客满意为出发点进行价值链的分解与整合，改造原有的业务流程，实现业务流程最优化`
+
+# 业务流程建模
+自顶向下：从企业任务目标出发，逐步分析业务目标，细化为系统需求。  
+自底向上：分析现有系统，联系已有业务流程，明确业务细节  
++ 标杆瞄准：连续、系统化地对外部领先企业进行分析评价，以此确认本企业业务流程
++ IDEF：是一系列建模、分析和仿真方法的统称。（IDEF0-14, IDEF1X共16种）
++ DEMO：通过六种建模语言描述信息系统的构成。包括交互模型、业务流程模型、事务模型、行为墨西哥、事实模型、互约束模型
++ Petri: Petri网是一种从流程角度出发描述与分析复杂模型的工具
++ 业务流程建模建模语言
+  + BPEL (business process execution language) 业务流程执行语言 文本
+  + BPML (business process modeling language) 业务流程建模语言 文本
+  + BPMN (business process modeling notation) 业务流程建模标注 图元
+  + XPDL (xml process definition language) xml流程定义语言 文本/图元
+  + uml （主要指活动图） 图元
++ 基于服务的BPM 把bpm技术和服务的思想集合，更加便于对业务流程的分析、设计、优化。（将业务流程转化为服务）
+
+# 数据与数据流流程分析
+本阶段是建立数据库系统和设计功能模块处理过程的基础，本阶段分析师收集大量数据载体和调查报表，加以汇总、整理、分析以统使用
+
++ 数据汇总分析 `从业务角度对数据进行分类整理`
+  1. 将收集到的数据资料，按业务流程分类编码，按处理过程的顺序排放
+  2. 按业务流程自顶向下对数据项进行整理
+  3. 将原始数据与最终输出数据分类整理出来；原始数据是进行数据库设计时确定基本表的主要内容，最终输出数据是反应业务所需要的主要指标。
+  4. 确定数据字长和精度
++ 数据属性分析
+  + 静态分析 `数据的静态特征`
+    + 类型长度
+    + 取值范围
+    + 发生的业务量 `数据发生的频率、峰值数据量、峰值时间、存储保留时间周期等`
+    + 数据涉及的业务
+    + 重要程度、保密程度 `涉及校队、存储、复制、备份，访问权限等`
+  + 动态分析
+    + 固定值属性数据项 `其一般不随时间变化，如物料主数据、客户基础资料`
+    + 个体变动属性数据项 `对总体来讲具有相对固定的个体集，但对个体来讲其值变化。如库存余额、侧键在制品品余额等 （需及时维护）`
+    + 随机变动属性数据项 `其个体随机出现、其值变动。是根据用户对管理工作的需要，由系统按照一定逻辑运算行成。如每月各商品销量数据`
++ 数据存储分布
+  * 对数据进行动态分析的目的是为了确认数据与数据库表（或文件）的关系，如将具有固定属性的数据存放在基本表（主文件），随机变动属性放在视图（处理文件）中
+  * 确认数据在真个信息系统的存储分布情况。如确认那些数据存储于本地、网络服务器或系统主机
++ 数据流程分析
+  + `数据流程指在数据在系统中产生、传输、加工处理、使用、存储的过程。系统流程分析将数据流抽象独立出来，舍去具体的企业结构组织、信息载体、物质、材料等，但从数据流动的过程考察分析实际业务的数据处理模式。`  
+  + `目的是发现和解决数据流通中的问题。如数据不能流通、前后数据不匹配、处理过程不合理、输入输出不平衡等`
+  + `本阶段主要包括对数据的输入、输出、流动、传递、处理、存储分析，具体包含：`
+    1. 收集现有系统的全部输入、输出单据报表，以及数据存储介质（账本、清单等）的典型格式
+    2. 明确各个处理过程的处理方法和计算方法
+    3. 调查、确认上述各类单据报表的静态属性（制作单位、存储单位、频率、高峰量等）。
+    4. 标注各项数据的类型、长度、取值范围等静态属性
+  + SA面向数据流的分析方法（DFD）; OO面向对象的分析方法
+
+
+
+# 系统需求规格说明书
++ 系统分析报告、系统说明书。是系统分析阶段的技术文档、工作成果;其包含9部分：  
+`引言、引用文件、需求、合规性要求、需求可追踪性、非技术要求、尚未解决的问题、注解、附录`
++ 此文件在系统开发中占有非常重要的地位。一旦通过评审，将成为系统开发中的权威文件，是系统设计阶段的总要依据，是验收系统的标准之一。
+
+
+
+# THE END  
